WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90829
DFG may get stuck in an infinite fix point if it constant folds a mispredicted node
https://bugs.webkit.org/show_bug.cgi?id=90829
Summary
DFG may get stuck in an infinite fix point if it constant folds a mispredicte...
Filip Pizlo
Reported
2012-07-09 15:50:35 PDT
Patch forthcoming.
Attachments
the patch
(22.17 KB, patch)
2012-07-09 15:55 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-07-09 15:50:57 PDT
<
rdar://problem/11823843
>
Filip Pizlo
Comment 2
2012-07-09 15:55:35 PDT
Created
attachment 151339
[details]
the patch
Filip Pizlo
Comment 3
2012-07-09 16:29:12 PDT
Landed in
http://trac.webkit.org/changeset/122167
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug